# steward-app

./: .env.example  .gitignore  AGENTS.md  ALL_USER_JOURNEYS.md  CLAUDE.md  CONTEXT.md  FEATURES.md  LICENSE  PERF_PROFILE.md  PRODUCTION_INVARIANTS.md  PRODUCTION_READINESS.md  README.md  SETUP.md  SYSTEM_MAP.md  bootstrap.sh  pyproject.toml  requirements.txt  run.py  run_web.py
assistant/: __init__.py  __main__.py  config.py  diagnostics.py  logging_setup.py  main.py  models.py
deploy/: com.cos.assistant.plist.template  com.cos.relay.plist.template  com.cos.web.plist.template  install_all.sh  install_launchd.sh
docs/: APP_OVERVIEW.md  ARCHITECTURE.md  INTELLIGENCE.md  MEMORY.md  STEWARD_DESIGN.md  WEB.md  WHATSAPP.md
evaluation/: __init__.py  metrics.py  run_all.py  runner.py  test_flow.py
mac/: Package.swift  README.md  Steward.icns  build_app.sh
prompts/: brief.md  classifier.md  command_parse.md  commitments.md  distill.md  drafting.md  noise_filter.md  self_critique.md  think.md  voice_profile.md
relay/: RELAY_README.md  package-lock.json  package.json  whatsapp_relay.js
scripts/: dashboard.py  demo_rearm.sh  fresh_start.sh  get_chat_id.py  handover.sh  load_test.py  profile_pipeline.py  smoke_real.py  verify_invariants.py
tests/: helpers.py  test_action_drafting_hardening.py  test_address_book_import.py  test_all_use_cases.py  test_auth.py  test_brief_endpoint.py  test_calendar_actions.py  test_calibration.py  test_classification_safety.py  test_commitment_dedup.py  test_commitment_extract.py  test_commitments.py  test_commitments_listing.py  (+87 more)
(+104 files in other folders)
